...
    <string name="tap_find">Tap to take a picture!</string>
    <string name="wienerberger_logo">Wienerberger logo</string>
    <string name="visual_brick_finder">Visual Brick Finder</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="photo_crop">Photo</string>
    <string name="recrop_image">ReCrop image</string>
    <string name="accept_cropped_image">Accept cropped image</string>
    <string name="title_crop_screen">Find results for this image?</string>
    <string name="item_brick_test_name">This is product name</string>
    <string name="item_brick_website_txt">Website</string>
    <string name="item_brick_details_txt">Details</string>
    <string name="item_brick_brand_txt">Brand:</string>
    <string name="item_brick_test_brand">Some brand:</string>
    <string name="item_brick_test_description">Tis is description</string>
    <string name="item_brick_brick_image_description">Brick image</string>
    <string name="item_roof_tile_dimensions_label">Dimensions:</string>
    <string name="item_roof_tile_dimensions_test_text">22x33</string>
...
