...
                    android:layout_alignParentEnd="true"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Button" />
                -->


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_brick_details"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:backgroundTint="@color/greyButtonColor"
                    android:fontFamily="@font/roboto_medium"
                    android:paddingTop="10dp"
                    android:text="@string/item_brick_details_txt"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Button" />
            </RelativeLayout>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/expandable_brick_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:visibility="gone">

                <RelativeLayout
...
